(coq.extraction
 (prelude extraction)
 (extracted_modules BinNums Bool Qextended Utils Binary BinPosDef Datatypes Round Zaux BinarySingleNaN
                    BinPos Interval SpecFloat FloatClass Zbool BinInt Bits Specif Zpower Assert GenericFloat Version
                    Defs Operations Op)
 (theories Farith))
