(rule (action (copy ../extract/BinNums.ml BinNums.ml)) (mode promote))
(rule (action (copy ../extract/Bool.ml Bool.ml)) (mode promote))
(rule (action (copy ../extract/Qextended.ml Qextended.ml)) (mode promote))
(rule (action (copy ../extract/Utils.ml Utils.ml)) (mode promote))
(rule (action (copy ../extract/BinNums.mli BinNums.mli)) (mode promote))
(rule (action (copy ../extract/Bool.mli Bool.mli)) (mode promote))
(rule (action (copy ../extract/Qextended.mli Qextended.mli)) (mode promote))
(rule (action (copy ../extract/Utils.mli Utils.mli)) (mode promote))
(rule (action (copy ../extract/Binary.ml Binary.ml)) (mode promote))
(rule (action (copy ../extract/BinPosDef.ml BinPosDef.ml)) (mode promote))
(rule (action (copy ../extract/Datatypes.ml Datatypes.ml)) (mode promote))
(rule (action (copy ../extract/Round.ml Round.ml)) (mode promote))
(rule (action (copy ../extract/Zaux.ml Zaux.ml)) (mode promote))
(rule (action (copy ../extract/Binary.mli Binary.mli)) (mode promote))
(rule (action (copy ../extract/BinPosDef.mli BinPosDef.mli)) (mode promote))
(rule (action (copy ../extract/Datatypes.mli Datatypes.mli)) (mode promote))
(rule (action (copy ../extract/Round.mli Round.mli)) (mode promote))
(rule (action (copy ../extract/Zaux.mli Zaux.mli)) (mode promote))
(rule (action (copy ../extract/BinarySingleNaN.ml BinarySingleNaN.ml)) (mode promote))
(rule (action (copy ../extract/BinPos.ml BinPos.ml)) (mode promote))
(rule (action (copy ../extract/Interval.ml Interval.ml)) (mode promote))
(rule (action (copy ../extract/SpecFloat.ml SpecFloat.ml)) (mode promote))
(rule (action (copy ../extract/FloatClass.ml FloatClass.ml)) (mode promote))
(rule (action (copy ../extract/Zbool.ml Zbool.ml)) (mode promote))
(rule (action (copy ../extract/BinarySingleNaN.mli BinarySingleNaN.mli)) (mode promote))
(rule (action (copy ../extract/BinPos.mli BinPos.mli)) (mode promote))
(rule (action (copy ../extract/Interval.mli Interval.mli)) (mode promote))
(rule (action (copy ../extract/SpecFloat.mli SpecFloat.mli)) (mode promote))
(rule (action (copy ../extract/FloatClass.mli FloatClass.mli)) (mode promote))
(rule (action (copy ../extract/Zbool.mli Zbool.mli)) (mode promote))
(rule (action (copy ../extract/BinInt.ml BinInt.ml)) (mode promote))
(rule (action (copy ../extract/Bits.ml Bits.ml)) (mode promote))
(rule (action (copy ../extract/Specif.ml Specif.ml)) (mode promote))
(rule (action (copy ../extract/Zpower.ml Zpower.ml)) (mode promote))
(rule (action (copy ../extract/BinInt.mli BinInt.mli)) (mode promote))
(rule (action (copy ../extract/Bits.mli Bits.mli)) (mode promote))
(rule (action (copy ../extract/Specif.mli Specif.mli)) (mode promote))
(rule (action (copy ../extract/Zpower.mli Zpower.mli)) (mode promote))
(rule (action (copy ../extract/Assert.ml Assert.ml)) (mode promote))
(rule (action (copy ../extract/Assert.mli Assert.mli)) (mode promote))
(rule (action (copy ../extract/GenericFloat.ml GenericFloat.ml)) (mode promote))
(rule (action (copy ../extract/GenericFloat.mli GenericFloat.mli)) (mode promote))
(rule (action (copy ../extract/Version.ml Version.ml)) (mode promote))
(rule (action (copy ../extract/Version.mli Version.mli)) (mode promote))
(rule (action (copy ../extract/Defs.ml Defs.ml)) (mode promote))
(rule (action (copy ../extract/Defs.mli Defs.mli)) (mode promote))
(rule (action (copy ../extract/Operations.ml Operations.ml)) (mode promote))
(rule (action (copy ../extract/Operations.mli Operations.mli)) (mode promote))
(rule (action (copy ../extract/Op.ml Op.ml)) (mode promote))
(rule (action (copy ../extract/Op.mli Op.mli)) (mode promote))
